[GTK] Add stubs for missing symbols in dom bindings https://bugs.webkit.org/show_bug.cgi?id=123663

Patch by Emilio Pozuelo Monfort <pochu27@gmail.com> on 2013-11-05
Reviewed by Carlos Garcia Campos.

* bindings/gobject/WebKitDOMCustom.cpp:
(webkit_dom_html_head_element_get_profile):
(webkit_dom_html_head_element_set_profile):
(webkit_dom_processing_instruction_get_data):
(webkit_dom_processing_instruction_set_data):
* bindings/gobject/WebKitDOMCustom.h:
* bindings/gobject/WebKitDOMCustom.symbols:

Canonical link: https://commits.webkit.org/141989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158662 268f45cc-cd09-0410-ab3c-d52691b4dbfc